# mdoctor

./: .travis.yml  CMakeLists.txt  ClickGraphScene.cpp  ClickGraphScene.h  ConnectionUI.cpp  ConnectionUI.h  ElementUI.cpp  ElementUI.h  FlatConfigToScene.cpp  FlatConfigToScene.h  GraphLayoutHelper.cpp  GraphLayoutHelper.h  GraphicsView.cpp  GraphicsView.h  Lexer.cpp  Lexer.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NavigationPane.cpp  NavigationPane.h  Parser.cpp  Parser.h  TargetDevice.cpp  TargetDevice.h  TraceDat.cpp  TraceDat.h  TraceEventClick.cpp  TraceEventClick.h  magic_enum.hpp
